# poolswitch

./: .gitignore  .mintignore  .mintlifyignore  README.md  docs.json  netlify.toml  package-lock.json  package.json  poolswitch.example.yaml  pyproject.toml  vercel.json
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: architecture.md  architecture.mdx  configuration.md  configuration.mdx  deploying-with-mintlify.mdx  deployment.md  embedded-node.md  embedded-node.mdx  embedded-python.md  embedded-python.mdx  index.md  introduction.mdx  metrics-health.md  metrics-health.mdx  proxy-mode.md  proxy-mode.mdx  quickstart.md  quickstart.mdx  strategies.md  strategies.mdx
docs/.vitepress/: config.mts
poolswitch/: __init__.py  client.py  config.py  errors.py  metrics.py  models.py
poolswitch/cli/: main.py
poolswitch/core/: factory.py  key_pool.py  quota.py
poolswitch/proxy/: app.py
poolswitch/retry/: __init__.py  policy.py
poolswitch/storage/: __init__.py  base.py  memory.py  redis_store.py  sqlite_store.py
poolswitch/strategies/: __init__.py  base.py  impl.py
scripts/: mint-dev.ps1
sdk-go/: README.md  client.go  client_test.go  coverage  go.mod
sdk-node/: README.md  package-lock.json  package.json
sdk-node/src/: index.d.ts  index.js  index.mjs
sdk-node/test/: index.test.js
sdk-python/: README.md  pyproject.toml
sdk-python/poolswitch_client/: __init__.py  client.py
tests/: conftest.py  test_base_abstracts.py  test_cli.py  test_config.py  test_config_extras.py  test_embedded_client.py  test_factory.py  test_key_pool.py  test_key_pool_extras.py  test_metrics.py  test_models.py  test_proxy.py  test_proxy_internal.py  test_quota.py  test_retry.py  test_sdk_python.py  test_storage_memory.py  test_storage_redis.py  test_storage_sqlite.py  test_strategies.py
