[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "poolswitch-python"
version = "0.1.0"
description = "Lightweight Python SDK for the PoolSwitch proxy."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["httpx>=0.28.1"]

[tool.hatch.build.targets.wheel]
packages = ["poolswitch_client"]

